--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
       "OSL-3.0"
     ],
     "require": {
-      "php": "~7.1.0||~7.2.0||~7.3.0||~7.4.0"
+      "php": "~7.4.0"
     },
     "authors": [
       {
