Composer.json update

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     },
     "authors": [
       {
-        "name": "Dustin Yu",
+        "name": "Prateek Tyagi",
         "email": "integrations@alive5.com",
         "homepage": "https://alive5.com/",
         "role": "Developer"
